Add an onscreen hud that shows the distance